--- a/Assets/css/pages/index/partials/footer.css
+++ b/Assets/css/pages/index/partials/footer.css
@@ -15,6 +15,7 @@ footer .container {
 footer .container .col {
     height: 50vh;
     margin-bottom: 0;
+    align-items: start;
 }
 
 footer h4 {
@@ -80,6 +81,12 @@ footer .blog a, .contato a {
     footer .headline {
         padding: auto;
         gap: 10px;
+    }
+}
+
+@media screen and (max-width: 1366px) {
+    footer .headline {
+        padding: 40px;
     }
 }
 
