--- a/Assets/css/pages/index/partials/sobre.css
+++ b/Assets/css/pages/index/partials/sobre.css
@@ -4,7 +4,7 @@ section.sobre .col {
 }
 
 section.sobre .col img {
-    max-width: var(--img-w1);
+    width: var(--img-w1);
     position: absolute;
     right: 0;
 }
@@ -33,6 +33,8 @@ h2 span:last-child {
         max-width: 100%;
         position:inherit;
         transform: translateX(-8%);
+        bottom: 0;
+        left: 0;
     }
 }
 
